--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,5 +1,5 @@
 # k8s/secret.yaml
-# Placeholder Kubernetes Secret for RetroIDE sensitive data
+# Kubernetes Secret for QuonxCoder sensitive data
 # IMPORTANT: Values must be base64 encoded.
 # Use `echo -n 'your-secret-value' | base64` to encode.
 # Consider using more secure secret management tools like HashiCorp Vault, Sealed Secrets, etc.
@@ -7,19 +7,33 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: retroide-secrets
+  name: quonxcoder-secrets
 type: Opaque # Default type
 data:
-  # --- API Keys ---
-  # echo -n 'your_google_genai_api_key' | base64
-  google-genai-api-key: eW91cl9nb29nbGVfZ2VuYWlfYXBpX2tleQ== # Replace with actual base64 encoded key
-
   # --- Service Secrets ---
   # echo -n 'your-strong-secret-key-for-vault' | base64
   secret-vault-key: eW91ci1zdHJvbmctc2VjcmV0LWtleS1mb3ItdmF1bHQ= # Replace with actual base64 encoded key
 
-  # --- Database Credentials (if applicable) ---
+  # --- AI API Keys ---
+  # echo -n 'your_google_genai_api_key' | base64
+  google-genai-api-key: Z2VuYWktc2VjcmV0LWtleQ== # Optional - Replace with actual base64 encoded key
+  # echo -n 'your_anthropic_api_key' | base64
+  anthropic-api-key: YW50aHJvcGljLXNlY3JldC1rZXk= # Optional - Replace with actual base64 encoded key
+  # echo -n 'your_openai_api_key' | base64
+  openai-api-key: b3BlbmFpLXNlY3JldC1rZXk= # Optional - Replace with actual base64 encoded key
+
+  # --- Database/Cache Credentials (if applicable) ---
   # echo -n 'your_db_password' | base64
   # db-password: eW91cl9kYl9wYXNzd29yZA==
+  # echo -n 'your_redis_password' | base64
+  # redis-password: cmVkaXMtcGFzc3dvcmQ=
 
-  # Add other sensitive credentials as needed
+  # --- Vector DB API Key (if required by chosen DB) ---
+  # echo -n 'your_qdrant_api_key' | base64
+  # qdrant-api-key: cWRyYW50LXNlY3JldC1rZXk=
+
+  # Add other sensitive credentials as needed (e.g., GitHub OAuth App secrets)
+  # github-client-id: ...
+  # github-client-secret: ...
+
+```
