--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,56 +1,137 @@
 # k8s/service.yaml
-# Placeholder Kubernetes Service for RetroIDE Frontend
+# Kubernetes Services for QuonxCoder components
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: retroide-frontend-service
+  name: quonxcoder-frontend-service
 spec:
   selector:
-    app: retroide-frontend # Matches the labels of the Pods created by the Deployment
+    app: quonxcoder-frontend # Matches the labels of the Pods created by the Deployment
   ports:
-    - protocol: TCP
+    - name: http # Changed name for clarity
+      protocol: TCP
       port: 80 # Port the service will listen on within the cluster
       targetPort: 9002 # Port the container is listening on
   type: ClusterIP # Exposes the service on a cluster-internal IP (default)
-                 # Use LoadBalancer for cloud providers or NodePort for direct node access
-                 # Consider using an Ingress controller for HTTP routing
+                 # Ingress controller will target this service
 
-# --- Placeholder Services for Backend Services ---
-# Add similar services for collaboration-service, secrets-service, redis, ollama etc.
-# Ensure the selectors match the respective deployment labels.
-# Example for collaboration-service:
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: retroide-collaboration-service
-# spec:
-#   selector:
-#     app: retroide-collaboration
-#   ports:
-#     - name: http # Port for potential REST endpoints
-#       protocol: TCP
-#       port: 3001
-#       targetPort: 3001
-#     - name: websocket # Separate port or handled by same port? Depends on implementation
-#       protocol: TCP
-#       port: 3001 # Assuming WS on the same port, adjust if different
-#       targetPort: 3001
-#   type: ClusterIP
-# ---
-# Example for redis:
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: retroide-redis-service
-# spec:
-#   selector:
-#     app: retroide-redis # Assuming redis deployment/statefulset has this label
-#   ports:
-#     - protocol: TCP
-#       port: 6379
-#       targetPort: 6379
-#   type: ClusterIP
-# ---
+---
+# Service for Collaboration Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: quonxcoder-collaboration-service
+spec:
+  selector:
+    app: quonxcoder-collaboration
+  ports:
+    - name: websocket # Port for WebSocket and potential REST endpoints
+      protocol: TCP
+      port: 3001
+      targetPort: 3001
+  type: ClusterIP
+---
+# Service for Secrets Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: quonxcoder-secrets-service
+spec:
+  selector:
+    app: quonxcoder-secrets
+  ports:
+    - name: http
+      protocol: TCP
+      port: 3002
+      targetPort: 3002
+  type: ClusterIP
+---
+# Service for AI Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: quonxcoder-ai-service
+spec:
+  selector:
+    app: quonxcoder-ai
+  ports:
+    - name: http
+      protocol: TCP
+      port: 3003
+      targetPort: 3003
+  type: ClusterIP
+---
+# Service for Agent Coordinator Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: quonxcoder-agent-coordinator-service
+spec:
+  selector:
+    app: quonxcoder-agent-coordinator
+  ports:
+    - name: http
+      protocol: TCP
+      port: 3004
+      targetPort: 3004
+  type: ClusterIP
+---
+# Service for Vector Database (e.g., Qdrant)
+apiVersion: v1
+kind: Service
+metadata:
+  name: quonxcoder-vector-db-service
+spec:
+  selector:
+    app: quonxcoder-vector-db # Matches deployment/statefulset labels
+  ports:
+    - name: http
+      protocol: TCP
+      port: 6333
+      targetPort: 6333
+    - name: grpc
+      protocol: TCP
+      port: 6334
+      targetPort: 6334
+  type: ClusterIP
+---
+# Service for Redis
+apiVersion: v1
+kind: Service
+metadata:
+  name: quonxcoder-redis-service
+spec:
+  selector:
+    app: quonxcoder-redis # Matches deployment/statefulset labels
+  ports:
+    - name: redis
+      protocol: TCP
+      port: 6379
+      targetPort: 6379
+  type: ClusterIP
+---
+# Service for Observability Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: quonxcoder-observability-service
+spec:
+  selector:
+    app: quonxcoder-observability
+  ports:
+    - name: http
+      protocol: TCP
+      port: 3005 # Port for your custom service
+      targetPort: 3005
+    # Add ports for Grafana/Prometheus if needed
+    # - name: grafana
+    #   port: 3000
+    #   targetPort: 3000
+    # - name: prometheus
+    #   port: 9090
+    #   targetPort: 9090
+  type: ClusterIP
+---
+# Add services for Git, Language Env, Deployment services if implemented
+```
